--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "laravel/socialite": "^5.14",
         "laravel/tinker": "^2.9",
         "maatwebsite/excel": "^3.1",
-        "realrashid/sweet-alert": "^7.1"
+        "realrashid/sweet-alert": "^7.1",
+        "yajra/laravel-datatables-oracle": "^11.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
