--- a/composer.json
+++ b/composer.json
@@ -6,12 +6,14 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "barryvdh/laravel-dompdf": "^2.2",
         "dyrynda/laravel-cascade-soft-deletes": "^4.4",
         "laravel/framework": "^11.9",
         "laravel/socialite": "^5.14",
         "laravel/tinker": "^2.9",
         "maatwebsite/excel": "^3.1",
         "realrashid/sweet-alert": "^7.1",
+        "spatie/browsershot": "^4.1",
         "yajra/laravel-datatables-oracle": "^11.1"
     },
     "require-dev": {
