--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,8 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "barryvdh/laravel-dompdf": "^2.2",
+        "dompdf/dompdf": "^2.0",
         "haruncpi/laravel-id-generator": "^1.1",
         "laravel/framework": "^11.9",
         "laravel/socialite": "^5.14",
