--- a/package.json
+++ b/package.json
@@ -9,5 +9,9 @@
         "axios": "^1.6.4",
         "laravel-vite-plugin": "^1.0",
         "vite": "^5.0"
+    },
+    "dependencies": {
+        "fullcalendar": "^6.1.15",
+        "sweetalert2": "^11.12.4"
     }
 }
